force-app/main/default/objects/tb_Project__c/fields/tb_GoodsInProcessAmountWithTax__c.field-meta.xml
<CustomField>
    <fullName>tb_GoodsInProcessAmountWithTax__c</fullName>
    <inlineHelpText></inlineHelpText>
    <label>Goods in Process Amount</label>
    <summarizedField>tb_Cost__c.tb_GoodsInProcessAmountWithTax__c</summarizedField>
    <summaryForeignKey>tb_Cost__c.tb_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>