force-app/main/default/objects/tb_Project__c/fields/tb_ParentProject__c.field-meta.xml
<CustomField>
    <fullName>tb_ParentProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>tb_Project__c</referenceTo>
    <relationshipLabel>Child Project</relationshipLabel>
    <relationshipName>tb_ParentProject_r</relationshipName>
    <type>Lookup</type>
</CustomField>