force-app/main/default/objects/tb_Project__c/fields/tb_Project__c.field-meta.xml
<CustomField>
    <fullName>tb_Project__c</fullName>
    <displayFormat>P-{0000000000}</displayFormat>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>